adds markdown blog posts

--- a/lib/softwaremaxims_web/templates/blog/show.html.eex
+++ b/lib/softwaremaxims_web/templates/blog/show.html.eex
@@ -1,6 +1,5 @@
 <div class="container">
-  <h1 class="text-center"> <%= @blog_post[:title] %> </h1>
   <div class="container mx-auto">
-    <%= @blog_post[:body] %>
+    <%= Phoenix.HTML.raw(@blog_post.body) %>
   </div>
 </div>
