--- a/lib/softwaremaxims_web/templates/blog/show.html.eex
+++ b/lib/softwaremaxims_web/templates/blog/show.html.eex
@@ -1,5 +1,3 @@
-<div class="container">
-  <div class="container mx-auto">
-    <%= Phoenix.HTML.raw(@blog_post.body) %>
-  </div>
+<div class="container blogpost">
+  <%= Phoenix.HTML.raw(@blog_post.body) %>
 </div>
