--- a/lib/softwaremaxims_web/templates/page/index.html.eex
+++ b/lib/softwaremaxims_web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="text-center"> This is a blog about software </h1>
   <h2 class="text-center"> Blog </h2>
-  <div class="flex flex-coll flex-no-wrap justify-center">
+  <div class="flex flex-col flex-no-wrap justify-center">
     <%= for post <- @post_list do %>
       <a class="text-center text-xl font-semibold"
           href="<%= blog_path(@conn, :show, post.slug) %>">
