--- a/lib/softwaremaxims_web/templates/blog/show.html.eex
+++ b/lib/softwaremaxims_web/templates/blog/show.html.eex
@@ -1,3 +1,3 @@
-<div class="container blogpost">
+<div class="container blogpost bg-light-colour border-4 border-dark-colour rounded-lg flex items-center">
   <%= Phoenix.HTML.raw(@blog_post.body) %>
 </div>
