--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,17 +5,23 @@
 @tailwind components;
 @tailwind utilities;
 
-.blog-image-size {
-  min-width: 250px;
-  width: 20%;
-  height: 20%;
+.blog-card {
+  @apply .flex .bg-light-colour .p-4 .rounded-lg .m-2 .mt-8 .flex-wrap-reverse .justify-center .items-center;
+  width: auto;
 }
 
-.blog-image {
-  @apply .blog-image-size .m-2;
+.blog-card-image {
+  @apply .m-2;
+  min-width: 50px;
+  max-width: 250px;
+  min-height: 50px;
+  max-height: 250px;
+  width: 25%;
+  height: auto;
 }
-.blogpost {
-  @apply .flex .flex-col .flex-no-wrap .justify-center .mx-auto;
+
+.blog-card-text {
+  max-width: 600px;
 }
 
 .justify-evenly {
