--- a/lib/softwaremaxims_web/templates/page/index.html.eex
+++ b/lib/softwaremaxims_web/templates/page/index.html.eex
@@ -1,9 +1,9 @@
 <div class="container">
   <h1 class="text-center font-bold my-3 text-light-colour"> Musings about software </h1>
-  <div class="flex flex-col flex-no-wrap justify-center">
+  <div class="flex flex-col flex-no-wrap justify-center items-center">
     <%= for post <- @post_list do %>
-    <div class="flex mt-8 bg-light-colour p-4 rounded-lg m-2 flex-wrap-reverse justify-center">
-      <div class="">
+    <div class="blog-card">
+      <div class="blog-card-text">
         <a class="primary-link post-title-list"
             href="<%= blog_path(@conn, :show, post.slug) %>">
           <%= post.title %>
@@ -12,7 +12,7 @@
           <%= post.intro %>
         </p>
       </div>
-      <img class="blog-image" src="<%= static_path(@conn, post.image) %>">
+      <img class="blog-card-image" src="<%= static_path(@conn, post.image) %>">
     </div>
     <% end %>
   </div>
