--- a/lib/softwaremaxims_web/templates/layout/app.html.eex
+++ b/lib/softwaremaxims_web/templates/layout/app.html.eex
@@ -19,18 +19,18 @@
       <header class="header">
         <nav class="container">
           <div class="flex items-center justify-center flex-wrap p-6 bg-main-colour">
-            <a class="text-dark-colour text-4xl font-bold hover:text-dark-accent no-underline" href="<%= page_path(@conn, :index) %>">
+            <a class="text-dark-colour text-3xl font-bold hover:text-dark-accent no-underline" href="<%= page_path(@conn, :index) %>">
               Software Maxims
             </a>
           </div>
           <ul class="list-reset flex items-center justify-center flex-wrap border-b-2 border-light-accent">
             <li class="p-4">
-              <a class="primary-link text-xl font-bold" href="<%= page_path(@conn, :index) %>">
+              <a class="primary-link text-lg font-bold" href="<%= page_path(@conn, :index) %>">
                 Blog
               </a>
             </li>
             <li class="p-4">
-              <a class="primary-link text-xl font-bold" href="https://dianaolympos.github.io/">
+              <a class="primary-link text-lg font-bold" href="https://dianaolympos.github.io/">
                 Resume
               </a>
             </li>
