--- a/lib/softwaremaxims_web/templates/page/index.html.eex
+++ b/lib/softwaremaxims_web/templates/page/index.html.eex
@@ -8,7 +8,7 @@
             href="<%= blog_path(@conn, :show, post.slug) %>">
           <%= post.title %>
         </a>
-        <p class="mt-4 mr-6">
+        <p class="mt-4 mr-6 text-lg font-medium font-mono">
           <%= post.intro %>
         </p>
       </div>
