--- a/assets/css/blog_post.css
+++ b/assets/css/blog_post.css
@@ -7,6 +7,7 @@
 
 .blogpost {
   @apply .flex .flex-col .flex-no-wrap .justify-center .mx-auto .text-dark-colour .pb-3 .bg-light-colour .border-4 .border-dark-colour .rounded-lg .items-center mt-2;
+  max-width: 60rem;
 }
 
 h1 {
@@ -18,7 +19,7 @@ h2 {
 }
 
 p {
-  @apply .text-base .font-normal .mx-6 .my-1 .leading-normal .text-justify .self-start;
+  @apply .text-lg .font-normal .mx-6 .my-1 .leading-normal .text-justify .self-start;
   letter-spacing: -.003em;;
 }
 
@@ -37,7 +38,21 @@ a:hover {
 }
 
 blockquote {
-  @apply .mx-3 .text-lg .italic;
+  @apply .text-lg .italic;
+  margin-right: 3rem;
+  margin-left: 3rem;
+}
+
+ul {
+  @apply .my-4 .ml-10 .mr-16 .self-start;
+}
+
+ol {
+  @apply .my-4 .ml-10 .mr-16 .self-start;
+}
+
+li {
+  @apply .mt-1 .text-lg .font-normal .leading-normal .text-justify .self-start;
 }
 
 pre {
@@ -49,9 +64,13 @@ strong {
 }
 
 .blog-post-image {
-  @apply .mt-3 rounded-l;
+  @apply rounded-l;
   width: 75vw;
   height: 30vw;
   max-height: 300px;
-  max-width: 1000px;
+  max-width: 952px;
+}
+
+.thin {
+  @apply .border-b-2 .border-main-colour .border-solid .mx-6 .w-16;
 }
