--- a/lib/softwaremaxims_web/templates/layout/app.html.eex
+++ b/lib/softwaremaxims_web/templates/layout/app.html.eex
@@ -51,4 +51,12 @@
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
+  <footer class="container main-footer">
+    <p class="footer-text">If you have any comment or want to contact me, please use one of these.</p>
+    <ul class="footer-list">
+      <li class="footer-element"><a class="footer-link" href="https://twitter.com/Di4naO">Twitter</a></li>
+      <li class="footer-element"><a class="footer-link" href="https://github.com/DianaOlympos">GitHub</a></li>
+      <li class="footer-element"><a class="footer-link" href="mailto:depierre.thomas+softwaremaxims@gmail.com">Mail</a></li>
+    </ul>
+  </footer>
 </html>
