--- a/lib/softwaremaxims_web/templates/layout/app.html.eex
+++ b/lib/softwaremaxims_web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="Software Maxims">
     <meta name="author" content="Thomas Depierre">
 
-    <link rel="shortcut icon" href="<%= static_path(@conn, "/favicon.png") %>">
+    <link rel="icon" href="<%= static_path(@conn, "/favicon.ico") %>">
     <title>Software Maxims</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <%= if @view_module == SoftwaremaximsWeb.BlogView do %>
