--- a/lib/softwaremaxims_web/templates/layout/app.html.eex
+++ b/lib/softwaremaxims_web/templates/layout/app.html.eex
@@ -19,26 +19,26 @@
     <div class="container mx-auto">
       <header class="header">
         <nav class="container">
-          <div class="flex items-center justify-center flex-wrap p-6 bg-main-colour">
-            <a class="text-dark-colour text-3xl font-bold hover:text-dark-accent no-underline" href="<%= Routes.page_path(@conn, :index) %>">
+          <div class="header-title">
+            <a class="header-title-link" href="<%= Routes.page_path(@conn, :index) %>">
               Software Maxims
             </a>
           </div>
-          <ul class="list-reset flex items-center justify-center flex-wrap border-b-2 border-light-accent">
-            <li class="p-4">
-              <a class="primary-link text-lg font-bold" href="<%= Routes.page_path(@conn, :index) %>">
+          <ul class="navbar">
+            <li class="navbar-container">
+              <a class="primary-link navbar-link" href="<%= Routes.page_path(@conn, :index) %>">
                 Blog
               </a>
             </li>
-            <li class="p-4">
-              <a class="primary-link text-lg font-bold" href="https://dianaolympos.github.io/">
+            <li class="navbar-container">
+              <a class="primary-link navbar-link" href="https://dianaolympos.github.io/">
                 Resume
               </a>
             </li>
-            <li class="p-4 text-light-colour">
+            <li class="navbar-container navbar-placeholder">
               Talks
             </li>
-            <li class="p-4 text-light-colour">
+            <li class="navbar-container navbar-placeholder">
               About
             </li>
           </ul>
