--- a/lib/softwaremaxims_web/templates/page/index.html.eex
+++ b/lib/softwaremaxims_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center font-bold my-3 text-light-colour"> Musings about software </h1>
+  <h1 class="page-title"> Musings about software </h1>
   <div class="flex flex-col flex-no-wrap justify-center items-center">
     <%= for post <- @post_list do %>
     <div class="blog-card">
