--- a/lib/softwaremaxims_web/templates/about/about.html.eex
+++ b/lib/softwaremaxims_web/templates/about/about.html.eex
@@ -2,35 +2,36 @@
     About the author 
   </h1>
   <div class="container blogpost pt-4">
-    <p> 
+    <p class="about-p"> 
       I am Thomas Depierre, a freelance software developer. I am always searching 
       for new clients. I can lead your teams or projects as well as just come to 
       teach some best practice to your teams around my main skills, especially 
       for teams new to the Elixir language.
     </p>
-    <p>
-      You can find me in multiple place  over the Internet and you will find 
-      all the contact you may need in the footer of this website. I am open to 
-      any professional inquiries via email.
-    </p>
 
-    <p>
-      I studied software engineering at multiple engineering schools in France 
-      and worked for multiple companies. I am specialized in complex and 
-      distributed systems. I am particularly good at "cleaning" existing 
-      products. If your software has became a tangled mess over time, and you 
-      are not too sure how to make it works as you would like, you are right my 
-      alley.
-    </p>
-
-    <p>
+    <p class="about-p">
       I have a particular love for the Elixir language, and functional 
       languages in general. I am also really interested in what keep our 
       complex software beating and running, and consequently spend a lot of 
       time writing code for the infrastructure that runs software.
     </p>
 
-    <p>
+    <p class="about-p">
+      You can find me in multiple place  over the Internet and you will find 
+      all the contact you may need in the footer of this website. I am open to 
+      any professional inquiries via email.
+    </p>
+
+    <p class="about-p">
+      I studied software engineering at multiple engineering schools in France 
+      and worked for multiple companies. I am specialized in complex and 
+      distributed systems. I am particularly good at "cleaning" existing 
+      products. If your software became a tangled mess over time, and you 
+      are not too sure how to make it works as you would like, you are right my 
+      alley.
+    </p>
+
+    <p class="about-p">
       This site is my personal writing. All the grammar mistakes are mine.
     </p>
   </div>
