--- a/lib/softwaremaxims_web/templates/layout/app.html.eex
+++ b/lib/softwaremaxims_web/templates/layout/app.html.eex
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Software Maxims">
-    <meta name="author" content="Thomas Depierre">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Software Maxims" />
+    <meta name="author" content="Thomas Depierre" />
 
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" />
     <title>Software Maxims</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" 
+      href="<%= Routes.static_path(@conn, "/css/app.css") %>" />
     <%= if Map.get(@conn.assigns, :add_blog_style, false) do %>
-      <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/blog_post.css") %>">
+      <link rel="stylesheet" 
+        href="<%= Routes.static_path(@conn, "/css/blog_post.css") %>" />
     <% end %>
   </head>
 
@@ -20,26 +22,36 @@
       <header class="header">
         <nav class="container">
           <div class="header-title">
-            <a class="header-title-link" href="<%= Routes.page_path(@conn, :index) %>">
+            <a class="header-title-link" 
+              href="<%= Routes.page_path(@conn, :index) %>">
               Software Maxims
             </a>
           </div>
           <ul class="navbar">
             <li class="navbar-container">
-              <a class="primary-link navbar-link" href="<%= Routes.page_path(@conn, :index) %>">
+              <a class="primary-link navbar-link" 
+                href="<%= Routes.page_path(@conn, :index) %>">
                 Blog
               </a>
             </li>
             <li class="navbar-container">
-              <a class="primary-link navbar-link" href="https://dianaolympos.github.io/">
+              <a class="primary-link navbar-link" 
+                href="<%= Routes.resume_path(@conn, :index) %>">
                 Resume
+              </a>
+            </li>
+            <li class="navbar-container">
+              <a class="primary-link navbar-link" 
+                href="<%= Routes.consulting_path(@conn, :index) %>">
+                Consulting
               </a>
             </li>
             <li class="navbar-container navbar-placeholder">
               Talks
             </li>
             <li class="navbar-container">
-              <a class="primary-link navbar-link" href="<%= Routes.about_path(@conn, :index) %>">
+              <a class="primary-link navbar-link"
+                href="<%= Routes.about_path(@conn, :index) %>">
                 About
               </a>
             </li>
@@ -52,7 +64,7 @@
       </main>
 
     </div> <!-- /container -->
-    <script src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= Routes.static_path(@conn, "/js/app.js") %>"> </script>
   </body>
   <footer class="container main-footer">
     <p class="footer-text">If you have any comment or want to contact me, please use one of these.</p>
