--- a/assets/css/blog_post.css
+++ b/assets/css/blog_post.css
@@ -1,11 +1,5 @@
 @import "./app.css";
 
-@tailwind base;
-
-@tailwind components;
-@tailwind utilities;
-
-
 .blogpost {
   @apply .flex .flex-col .flex-no-wrap .justify-center .mx-auto .text-dark-colour .pb-3 .bg-light-colour .border-4 .border-dark-colour .rounded-lg .items-center mt-2;
   max-width: 60rem;
@@ -17,6 +11,10 @@ h1 {
 
 h2 {
   @apply .text-2xl .font-bold .mx-6 .mt-5 .mb-2 .leading-tight .self-start;
+}
+
+h3 {
+  @apply .text-xl .font-bold .mx-6 .mt-5 .mb-2 .leading-tight .self-start;
 }
 
 p {
