--- a/lib/softwaremaxims_web/templates/consulting/consulting.html.eex
+++ b/lib/softwaremaxims_web/templates/consulting/consulting.html.eex
@@ -1,49 +1,61 @@
-<h1 class="page-title py-2"> 
-  What can i do for you
+<h1 class="page-title py-2">
+  What your team can get from me
 </h1>
 <div class="container blogpost pt-4">
   <p>
-    I am an Elixir developer with strong DevOps skills. You can read more about
-    who i am <a href="<%= Routes.about_path(@conn, :index) %>"> in About </a> 
-    and my experiences <a href="<%= Routes.resume_path(@conn, :index) %>"> in
-    Resume </a>. Here are some of the things i can help you with.
+    You have great people, and you know they could be an amazing team. Delivering
+    on business need, inspired, a real competitive advantage. Not held-back by long
+    repetitive process and problems they have to solve over and over again.
+
+    Most of these problems are systemic. Your people are great, the way their tools
+    and process are organised hold them back. I want to give your team the tools
+    to change their process and become a great learning system made of learning parts.
+
+    I can bring years of experience doing it for teams, particularly on the Elixir world.
   </p>
 
-  <h2 class="header-section-title"> Participate in your Elixir team </h2>
+  <h2 class="header-section-title"> Do you need help in your DevOps journey ? </h2>
   <p>
-    I can bring 4 years of Elixir knowledge (2 years in production) to your team.
-    As an admin of the Elixir Slack and a figure of the London Elixir community,
-    I have accumulate a lot of practical Elixir experience. I can bring that to
-    your project to expand your code base.
+    I have gone through that journey multiple times and built teams that deliver
+    tremendous business value. I can inspire your team with lessons from teams
+    that succeeded at this transformation and i can also help with technical
+    problems.
+  </p>
+
+  <h2 class="header-section-title"> Release Engineering and deployment tooling </h2>
+  <p>
+    Does your deployment process means a lot of clicking and typing ? It can take
+    months to get team members up to speed ? I can help level up your team's skill
+    at creating and maintaining smooth automations to get both dev and production
+    environement up to speed quickly.
   </p>
 
   <h2 class="header-section-title"> Help your Elixir codebase </h2>
   <p>
     I can evaluate your code base quality. At the end of this process, you will
-    have a clear blueprint for your team to keep working on a nicer code base
-    everyday. You will also have faster velocity and can expect your team to feel
-    they contribute high quality code.
+    have a clear blueprint of what actiosn to take. Your team will know what to do
+    to work on a nicer code base everyday. You will also have faster velocity and
+    can expect your team to feel they contribute high quality code.
   </p>
 
-  <h2 class="header-section-title"> Help your Team move to Elixir </h2>
+  <h2 class="header-section-title"> Move to Elixir </h2>
   <p>
     You have a project that would profit from Elixir strengths but your team is not
     100% confident in their abilities in the language ? My experience organising
-    and building team on the language can help. I can provide mentoring and 
-    training for your team, on an ongoing basis. They will get productive quick
+    and building team on the language can help. I can provide mentoring and
+    training for your team, on an ongoing basis. They will get productive quickly
     and i can accompany them while they grow their knowledge to ensure that your
     project is high quality even in a new language.
   </p>
 
 
-  <h2 class="header-section-title"> Speed up your team with DevOps process </h2>
+  <h2 class="header-section-title"> Your own idea ? </h2>
   <p>
-    Delivery performance, from commit to production, have been shown to be 
-    <a href="https://itrevolution.com/book/accelerate/">the best marker of an 
-    efficient team </a>. I have gone through that journey multiple times and
-    built teams that deliver tremendous business value. I can help your team get
-    from commit to production in a few hour, unleashing their potential, and your
-    business potential. This also mean engaging with the rest of your business 
-    and coaching your team in doing it.
+    The most well placed person to know your needs are yourself. Maybe you think
+    i could bring something else to your team or have particular needs. For a
+    few hours or a few months, I'd love to learn about what you are doing, ask
+    useful questions, dig in and help your team become a great learning system.
+
+    Let's talk (You can email me at depierre.thomas@gmail.com)
   </p>
 </div>
