--- a/lib/softwaremaxims_web/templates/consulting/consulting.html.eex
+++ b/lib/softwaremaxims_web/templates/consulting/consulting.html.eex
@@ -5,7 +5,7 @@
   <p>
     You have great people, and you know they could be an amazing team. Delivering
     on business need, inspired, a real competitive advantage. Not held-back by long
-    repetitive process and problems they have to solve over and over again.
+    repetitive process, problems they have to solve over and over again.
 
     Most of these problems are systemic. Your people are great, the way their tools
     and process are organised hold them back. I want to give your team the tools
