--- a/lib/softwaremaxims_web/templates/consulting/consulting.html.eex
+++ b/lib/softwaremaxims_web/templates/consulting/consulting.html.eex
@@ -59,7 +59,7 @@
   <h2 class="header-section-title"> Help your Elixir codebase </h2>
   <p>
     I can evaluate your code base quality. At the end of this process, you will
-    have a clear blueprint of what actiosn to take. Your team will know what to do
+    have a clear blueprint of what actions to take. Your team will know what to do
     to work on a nicer code base everyday. You will also have faster velocity and
     can expect your team to feel they contribute high quality code.
   </p>
