udpate elixir deps

--- a/lib/softwaremaxims_web/templates/layout/app.html.eex
+++ b/lib/softwaremaxims_web/templates/layout/app.html.eex
@@ -54,7 +54,7 @@
       </header>
 
       <main role="main">
-        <%= render @view_module, @view_template, assigns %>
+        <%= @inner_content %>
       </main>
 
     </div> <!-- /container -->
