--- a/lib/softwaremaxims_web/templates/page/index.html.eex
+++ b/lib/softwaremaxims_web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="page-title"> Musings about software </h1>
-  <div class="flex flex-col flex-no-wrap justify-center items-center">
+  <div class="flex flex-col flex-nowrap justify-center items-center">
     <%= for post <- @post_list do %>
     <div class="blog-card">
       <div class="blog-card-text">
@@ -8,7 +8,7 @@
             href="<%= Routes.blog_path(@conn, :show, post.slug) %>">
           <%= post.title %>
         </a>
-        <p class="mt-4 mr-6 text-lg font-medium font-mono">
+        <p class="mt-4 mr-6 text-lg leading-normal font-medium font-mono">
           <%= post.intro %>
         </p>
       </div>
